<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.crawler-commons</groupId>
  <artifactId>sitemap-parser-test</artifactId>
  <version>0.0.3</version>
  <packaging>jar</packaging>

  <name>sitemap-parser-test</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>11</java.version>
    <javac.src.version>${java.version}</javac.src.version>
    <javac.target.version>${java.version}</javac.target.version>
    <maven.compiler.release>11</maven.compiler.release>
    <slf4j.version>2.0.7</slf4j.version>
    <crawler-commons.version>1.4</crawler-commons.version>
    <rome.version>2.1.0</rome.version>
    <jwarc.version>0.24.1</jwarc.version>
    <junit.version>5.10.0-RC1</junit.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.github.crawler-commons</groupId>
      <artifactId>crawler-commons</artifactId>
      <version>${crawler-commons.version}</version>
    </dependency>

    <dependency>
      <groupId>org.netpreserve</groupId>
      <artifactId>jwarc</artifactId>
      <version>${jwarc.version}</version>
    </dependency>

    <dependency>
      <groupId>com.rometools</groupId>
      <artifactId>rome</artifactId>
      <version>${rome.version}</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>

     <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

  </dependencies>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>${javac.src.version}</source>
          <target>${javac.target.version}</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <id>crawler-commons-release-test</id>
      <name>Testing crawler-commons release candidates</name>
      <url>https://oss.sonatype.org/content/repositories/comgithubcrawler-commons-1019/</url>
    </repository>
  </repositories>
</project>
